# c_exercise

./: .gitignore  CMakeLists.txt
Data Strictures and Algorithms/: Common algorithms for arrays.c  array.c  homework.c  loop_control.c  pointer.c  string.c
Data_strictures/: Singly_Circular_Linked_List.c  Stack_And_Queue.c  circular_queue.c  enumeration.c  linked_list.c  structure.c
Tree_And_Binary-Tree/: Tree.c
c_examination/: assessment.c
math_examination/: math.md
